# reqvire

./: .README.md.swp  .gitignore  .mcp.json  .reqvireignore  AGENT.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Out.md  Plan.md  README.md  README.md.rust  SpecificationIndex.md  TODO.md  e -i HEAD~3  reqflow.yaml  reqflow.yaml.example-lr  reqflow.yaml.test  reqflow.yaml.test-diagram  reqflow.yaml.test2  reqflow.yml.example  reqvire.yaml  reqvire.yml.example  test_config.yaml
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude-plugin/agents/: project-bootstrapper.md  requirements-engineer.md  task-master.md
.claude-plugin/commands/: add-feature.md  add-requirement.md  add-verification.md  analyze-coverage.md  analyze-impact.md  analyze-model.md  generate-tasks.md  lint-model.md
.claude-plugin/skills/: syseng.md  task-master.md
.claude-plugin/templates/: CLAUDE.md
.claude/agents/: e2e-test-engineer.md  requirements-engineer.md  reqvire.md
.claude/commands/: find-redundant-verifications.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: auto_tag_release.yml  change_impact.yml  cla.yml  generate_diagrams.yml  pr.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  llm_context.md  main.rs  serve.rs
core/: Cargo.toml
core/src/: change_impact.rs  diagrams.rs  element.rs  element_registry.rs  error.rs  export.rs  filesystem.rs  format.rs  git_commands.rs  graph_export.rs  graph_registry.rs  html.rs  html_export.rs  index_generator.rs  lib.rs  lint.rs  matrix_generator.rs  model.rs  parser.rs  relation.rs  reports.rs  sections_summary.rs  subsection.rs  trace_tree_builder.rs  utils.rs  verification_trace.rs
core/src/linting/: absolute_links.rs  mod.rs  newlines.rs  nonlink_identifiers.rs  reserved_subsections.rs  separators.rs  whitespace.rs
core/src/tests/: general_tests.rs
core/templates/: base.html  model.html
doc/: About.md  Architectures.md  BlackboxProccess.md  CLA.md  CONTRIBUTING.md  DSDs.md  LogicalArchitecture.md  MOEs.md  README.md  RELEASE.md  Relations.md  Requirements.md  Usecases.md  UserStories.md  Verifications.md  code_of_conduct.md  configuration.md  user_guide.md
doc/requirements/: README.md
html/: .gitignore  CodeTraecabilityRequirements.html  LogicalArchitecture.html  MOEs.html  ManagingMbseModelsRequirements.html  MissionRequirements.html  PhysicalArchitecture.html  SpecificationsRequirements.html  Usecases.html  UserRequirements.html  UserStories.html  index.html
html/SystemRequirements/: ChangeImpactPropagation.html  Requirements.html
html/Verifications/: ChangeImpactTests.html  DiagramsTests.html  LintingTests.html  Misc.html  ReportsTests.html  TreacibilityMatrix.html  ValidationTests.html
reqvire-claude-plugin/: README.md
reqvire-claude-plugin/.claude-plugin/: plugin.json
reqvire-claude-plugin/commands/: add-feature.md  add-requirement.md  add-verification.md  analyze-coverage.md  analyze-impact.md  analyze-model.md  find-redundant-verifications.md  generate-tasks.md  lint-model.md
scripts/: install.sh
specifications/: Architecture.md  BusinessRequirements.md  CLAUDE.md  CodeTraecabilityRequirements.md  LogicalArchitecture.md  MOEs.md  ManagingMbseModelsRequirements.md  MissionRequirements.md  PhysicalArchitecture.md  README.md  Requirements.md  SpecificationsRequirements.md  SystemRequirements.md  TraceabilityMatrix.md  Usecases.md  UserRequirements.md  UserStories.md  index.md
specifications/DesignSpecifications/: DSD_Demo.md  DSD_ElementTypeAndMetadata.md  DSD_ElementsInDocument.md  DSD_ExternalFolders.md  DSD_RepresentationOfIdentifiersAndRelations.md  DSD_RequirementsChangePropagation.md  DSD_StructureAndAddressingInDocuments.md  (+5 more)
src/: change_impact.rs  cli.rs  config.rs  diagrams.rs  element.rs  element_registry.rs  error.rs  filesystem.rs  graph_export.rs  html.rs  html_export.rs  identifier.rs  index_generator.rs  init.rs  llm_context.html  llm_context.md  main.rs  markdown.rs  markdown.rs_  model.rs  parser.rs  relation.rs  reports.rs  tests.rs  utils.rs  validation.rs
src (copy)/: cli.rs  element.rs  error.rs  identifier.rs  main.rs  parser.rs  relation.rs  utils.rs  validation.rs
test-fixtures/: README.md
tests/: CLAUDE.md  run_tests.sh  test-matrix-generation.sh
todo_specifications/: CodeTraecabilityRequirements.md  Requirements.md  TODO.md
(+379 files in other folders)
