[workspace]
members = [
    "core",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
authors = ["Ilija Ljubicic <iliya.ljubicic@gmail.com>"]
description = "An agile Model-Based Systems Engineering (MBSE) framework designed to integrate with Git workflows"
repository = "https://github.com/ilijaljubicic/Reqvire"
homepage = "https://github.com/ilijaljubicic/Reqvire"
documentation = "https://github.com/ilijaljubicic/Reqvire#readme"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.9"
regex = "1.9"
camino = "1.1"
maud = "0.25"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
lazy_static = "1.4"
rayon = "1.8"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
pathdiff = "0.2"
termcolor = "1.4"
globset = "0.4.16"
rustc-hash = "1.1"
difference = "2.0"
reqvire = { path = "core" }

# Dev dependencies
assert_fs = "1.0"
predicates = "3.0"
tempfile = "3.8"
