[package]
name = "cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "reqvire"
path = "src/main.rs"

[dependencies]
reqvire = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

# File handling
globset = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
